@@ -1,9 +1,8 @@
 INCLUDES = \
 	$(PLANNER_CFLAGS) 		\
-	-DEGG_COMPILATION		\
+	-DEGG_COMPILATION
 	-DGTK_DISABLE_DEPRECATED	\
-	-DG_DISABLE_DEPRECATED		\
-	$(GNOMEUI_UNSTABLE)
+	-DG_DISABLE_DEPRECATED
 
 noinst_LTLIBRARIES = libeggrecent.la
 
